# TheMafiaHostBot

./: .gitignore  README.md
admin-app/: README.md  pnpm-lock.yaml
game-server/: Cargo.toml  README.md
tg-bot-server/: .env.example  .gitignore  Cargo.toml  README.md
tg-bot-server/src/: main.rs
tg-mini-app/: README.md  package.json  pnpm-lock.yaml
