[package]
name = "tg-bot-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
teloxide = { git = "https://github.com/TheMafiaHostBot/teloxide.git", branch = "patched", version = "0.13.0", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"] }
